--- a/sections/enhanced-product.liquid
+++ b/sections/enhanced-product.liquid
@@ -1,4 +1,4 @@
-<div class="enhanced-product-template">
+<div class="enhanced-product-template" data-product-id="{{ product.id }}">
   <div class="container">
     <div class="product-breadcrumbs">
       <a href="/">Home</a> / 
